--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10",
     "webpack-merge": "^4.2.1"
+  },
+  "dependencies": {
+    "parallax-js": "^3.1.0"
   }
 }
